media/css/firefox/releasenotes.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import "../sandstone/lib.less";
@import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
@font-face {
    font-family: 'Font Awesome';
    src: url('/media/fonts/fontawesome-webfont.eot?v4.01#iefix') format('embedded-opentype'),
         url('/media/fonts/fontawesome-webfont.woff?v4.01') format('woff'),
         url('/media/fonts/fontawesome-webfont.ttf?v4.01') format('truetype');
    font-weight: normal;
    font-style: normal;
}

#outer-wrapper {
    background: #fff;
    width: 100%;
    border: none;
    padding: 0px;
}

#wrapper {
    padding:0px;
    width: 100%;
    border:none;
}

.space #wrapper {
    background-repeat: no-repeat;
    background-position: 0px 180px;
    background-color: white;
    width : 100%;
}

#main-content {
    width: 100%;
}

.release-notes {
    background-color:white;
    width: 100%;
}

.tri-column {
    .span(4);
}

.label-column {
    .span(0);
    background-color: white;
}

.notes-column {
    width: 100%;
    text-align:left;
    background-color: white;
}

.note_wrapper {
    width: 75%;
     float: right;
}

.label_wrapper {
    width: 25%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
}

#new-wrapper {
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#fixed-wrapper {
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#changed-wrapper {
    .span(12);
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#developer-wrapper {
    .span(12);
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#html-wrapper {
    .span(12);
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#resolved-wrapper {
    .span(12);
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}

#unresolved-wrapper {
    .span(12);
    overflow: hidden;
    position: relative;
    width: 100%;
    padding-bottom:50px;
}


.note_wrap {
    padding-left: 20px;
}

#note-media {
    display: none;
}

.gray_note {
background-color: #F5FAFF;
}

.blue_note {
    background-color: #FFF;
}

.notes-head {
    .clearfix;
    padding:20px;
    margin-bottom: @baseLine * 2;
    background-color: #F0F0F0;

    h2,
    p {
        .span(12);
    }

    h1 {
        .span(9);
    }

    h1 {
        margin-bottom: .15em;
    }

    h2 {
        .font-size(1.428em);
        letter-spacing: normal;
        margin-bottom: .75em;
    }

    p {
        margin-bottom: 1em;
    }
}

.space .notes-head {
    background-repeat: no-repeat;
    background-position: top left;
    background-image: url('/media/img/firefox/releasenotes/aurora_small.png');
    background-size: 150px auto;
    padding: 10px 0 0 150px;
}

.blueprint .notes-head {
    h1,
    h2,
    p {
        .span(8);
    }
    h1 {
        margin-top: .25em;
        padding-top: 20px;
    }
    h2 {
        margin-bottom: .75em;
    }
}

.note_label {
    text-align: center;
}

#platform {
    overflow: hidden;
    padding-top:10px;
    .span(3);
    float:right;

    a {
        color: #000;
    }

    h4 {
        .font-size(15px);
        margin: 0 0 6px 0;
        padding: 0;
    }

    ul {
        margin: 0;
        padding: 3px;
        float: left;
        background: #fff;
    }

    li {
        margin: 0;
        padding: 0;
        list-style-type: none;
        float: left;
    }

    a {
    }

    span {
        color: #000;
        border-radius: 0 6px 6px 0;
        border-bottom: 5px solid rgba(43, 58, 153, .5);
    }

    li:first-child {
        padding-right: 1px;

       a,
      span {
           border-radius: 6px 0 0 6px;
        } 
    }

    a,
    span {
        display: block;
        padding: 12px 16px;
        .open-sans;
        .font-size(@smallFontSize);
        font-weight: 600;
        text-transform: uppercase;
        border-radius: 0 6px 6px 0;
    }
}

.space #platform {
    ul {
    }

    a {
        #gradient > .vertical-three-colors(#f2a279, #f28047, 3%, #c63);
    }

    span {
        color: #d79676;
        #gradient > .vertical(#7b3816 14%, #ac5022 95%);
    }

}

a.go:after,
.sidebar a:after {
    content: " »";
    white-space: nowrap;
}

article {
    .clearfix;
}

.notes-section {
    .box-shadow(@shadow);
    @shadow: 0 0 0 1px #fff inset;
    background: #fff;
}

.blueprint .notes-section {
    background: #111;
    background: rgba(9, 68, 121, .1);
    border: 1px solid rgba(25, 93, 153, .5);
    box-shadow: 0 0 10px rgba(9, 68, 121, .36) inset;
}

.space .notes-section {
    background: #303;
    background: rgba(40, 6, 57, .25);
    border: 1px solid rgba(80, 27, 91, .5);
    box-shadow: 0 0 10px rgba(72, 23, 95, .36) inset,
                0 -1px 0 rgba(134, 80, 168, .5) inset;
}

.section-items {
    list-style: none;
    margin: 0;

    > li {
        margin: 0;
        padding: .714rem 0 .5rem;
        position: relative;
        padding-bottom: 30px;
        padding-right:5px;
    }

    h4 {
        .font-size(18px);
        margin: 0 0 .25em;
    }

    p {
        margin: 0 0 .25em;
    }

    .note {
        .font-size(@smallFontSize);
        color: @textColorSecondary;
        margin: 0 0 .25em;
        padding-right: 20px;
    }
}

.space .section-items > li {
    border-top-color: #522853;
}

.blueprint .section-items > li {
    border-top-color: #173e62;
}
/* ... */

